# plotter

MA-Smartventil/: Unbenanntes Dokument
MA-Smartventil/java/.metadata/.plugins/org.eclipse.cdt.core/: language.settings.xml  rabbit-c-test.1539255565676.pdom
MA-Smartventil/java/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
MA-Smartventil/java/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
MA-Smartventil/java/.metadata/.plugins/org.eclipse.jdt.core/: 1686043722.index  1736685339.index  1845299434.index  1875166217.index  2069407808.index  2270162827.index  2351757757.index  240891800.index  2823107732.index  2912367806.index  2974774047.index  3067348121.index  3551229669.index  3564200105.index  3818130555.index  3892364803.index  4153439003.index  4227323203.index  425780489.index  666305594.index  713261452.index  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
MA-Smartventil/java/.metadata/.plugins/org.eclipse.jdt.debug.ui/: dialog_settings.xml
MA-Smartventil/java/.metadata/.plugins/org.eclipse.jdt.launching/: libraryInfos.xml
MA-Smartventil/java/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
MA-Smartventil/java/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workbench.xml  workingsets.xml
MA-Smartventil/java/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
MA-Smartventil/java/rabbit-c-test/: .cproject  .project
MA-Smartventil/java/rabbit-c-test/Debug/: makefile
MA-Smartventil/java/rabbit-c-test/Debug/src/: subdir.mk
MA-Smartventil/java/rabbit-c-test/src/: utils.c  utils.h
MA-Smartventil/java/rabbit-test/: .classpath  .project
MA-Smartventil/java/rabbit-test/src/mqtt/: Receiver.java
MA-Smartventil/python/amqp/: connect-amqp.py  emit_log_topic.py  receive.py  receive_log_topic.py  send.py
MA-Smartventil/python/http/: post.py
MA-Smartventil/svn/.svn/: wc.db
MA-Smartventil/svn/trunk/Doku/: Ports  RabbitMQ.txt
MA-Smartventil/svn/trunk/ForceTestBench/: ForceTestbench.conf
MA-Smartventil/svn/trunk/ProtocolPerformanceTestApplication/01_Doku/: applications.txt
kdev-ws/tutorial2/: CMakeCache.txt  Makefile  cmake_install.cmake  tutorial1
libusbJava/: LibusbJava-1_2_64bit.tar.bz2  at90usb1287test  howto-libusbjava.txt
libusbJava/java/.metadata/.plugins/org.eclipse.cdt.core/: language.settings.xml
libusbJava/java/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
libusbJava/java/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
libusbJava/java/.metadata/.plugins/org.eclipse.jdt.core/: 1667579511.index  1696376839.index  (+15 more)
libusbJava/java/LibusbJava/: .cproject  .project  LibusbJava.cpp  ch_ntb_inf_libusb_Libusb.h
libusbJava/java/LibusbJava/Release/: makefile  sources.mk  subdir.mk
libusbJava/java/LibusbJava/objects/: Usb_Device.h
libusbJava/java/at90usb1287libusbTester/: .project
libusbJava/java/ch.ntb.inf.libusb.LibusbJava/: .project
libusbJava/java/libusbTester/: .classpath  .project
libusbJava/java/libusbTester/src/: at90usb1287libusbTester.java
libusbJava/libusb-c/: a.out  iso  iso.cpp  isotest  isotest2  libusbisotest.cpp  testLibusb.cpp  testLibusb2.cpp  testinterrupt  testinterrupt.cpp  testlib2
libusbJava/libusb-c/LibusbJava/: .cproject  LibusbJava.cpp  libusb-transfer.h
libusbJava/libusb-c/LibusbJava/Debug/: makefile  subdir.mk
libusbJava/libusb-c/_pasted_code_/: .classpath
libusbJava/libusb-c/testLibusb/: .cproject  .project
libusbJava/libusb-c/testLibusb/Debug/: makefile  testLibusb
libusbJava/libusb-c/testLibusb/src/: testLibusbinterrupttransfer.cpp
libusbJava/libusb-svn-old/code/.svn/: wc.db
libusbJava/libusb-svn-old/code/branches/libusbx/java/test/: CMakeLists.txt
libusbJava/libusb-svn-old/code/tags/LibusbJava1_1/LibusbJava/: CMakeLists.txt
libusbJava/libusb-svn-old/code/trunk/: CMakeLists.txt
libusbJava/libusb-svn-old/code/trunk/LibusbJava/: .cproject  LibusbJava.cpp
libusbJava/libusb-svn-old/code/trunk/LibusbJava/objects/: Usb_Device.h
libusbJava/libusb-svn-old/code/trunk/java/src/ch/ntb/inf/libusb/: Device.java  Libusb.java
libusbJava/libusb-svn-old/code/trunk/java/src/ch/ntb/inf/libusb/exceptions/: JavaIllegalDeviceHandleException.java  NotSupportedException.java
libusbJava/libusb-svn-old/code/trunk/java/src/ch/ntb/inf/libusb/test/: LibusbJavaTest.java  UseTestLibusbJava.java
libusbJava/libusbx/: Cmds.txt
libusbJava/libusbx/.svn/: wc.db
libusbJava/libusbx/LibusbJava/: CMakeCache.txt  CMakeLists.txt  LibusbJava.cpp  ch_ntb_inf_libusb_Libusb.h
libusbJava/libusbx/WorkspaceC/.metadata/: version.ini
libusbJava/libusbx/WorkspaceJava/.metadata/: version.ini
libusbJava/libusbx/build64/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libusbJava/libusbx/build64/LibusbJava/: CTestTestfile.cmake  Makefile
libusbJava/libusbx/build64/Testing/: TAG
libusbJava/libusbx/build64/java/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libusbJava/libusbx/java/: license.txt
libusbJava/libusbx/runtime-EclipseApplication/.metadata/: version.ini
libusbJava/new/.svn/: wc.db
libusbJava/new/tags/LibusbJava1_1/java/: CMakeLists.txt
libusbJava/new/tags/LibusbJava1_1/java/src/: CMakeLists.txt
libusbJava/new/tags/LibusbJava1_1/java/src/ch/ntb/inf/libusb/: Context.java
libusbJava/new/tags/LibusbJava1_1/java/src/ch/ntb/inf/libusb/exceptions/: AccessDeniedException.java  OtherException.java
libusbJava/new/tags/LibusbJava1_1/java/src/ch/ntb/inf/libusb/test/: ByteBufferTest.java
libusbJava/new/tags/LibusbJava1_1/java/test/: CMakeLists.txt
libusbJava/new/tags/LibusbJava1_1/java/test/ch/ntb/inf/libusb/test/junit/mpc555Bdi/: CMakeLists.txt  Mpc555BdiDeviceTest.java
libusbJava/new/trunk/LibusbJava/: LibusbJava.cpp  version.properties
mqtt/: .receiver.py.swp  crate_send.py  emit_topic.py  howto.txt  receive_topics.py  receiver.py  sender.py  test.py  testcrate.py
(+440 files in other folders)
